--- a/celestial-cycle/src/pages/index.astro
+++ b/celestial-cycle/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const name = "Romeo";
 ---
 
 <html lang="en">
@@ -12,5 +12,6 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+		<h2>Hello {name}!</h2>
 	</body>
 </html>
