feat: update about page with additional gratitude message

--- a/celestial-cycle/src/pages/about.astro
+++ b/celestial-cycle/src/pages/about.astro
@@ -15,5 +15,6 @@ const name = "Romeo";
         <h2>... e il mio nuovo sito Astro!</h2>
         <p>Sto seguendo il tutorial introduttivo di Astro. Questa è la seconda pagina sul mio sito web, ed è la prima che ho costruito da solo!</p>
         <p>Questo sito si aggiornerà man mano che completerò altre parti del tutorial, quindi continua a controllare e vedi come sta andando il mio percorso!</p>
+        <p>Grazie per aver visitato il mio sito web Astro.</p>
     </body>
 </html>
