feat: add blog page with introductory content

--- a/celestial-cycle/src/pages/about.astro
+++ b/celestial-cycle/src/pages/about.astro
@@ -11,6 +11,9 @@ const name = "Romeo";
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+		<a href="/about/">Su di me</a>
+
 		<h1>Su di me</h1>
         <h2>... e il mio nuovo sito Astro!</h2>
         <p>Sto seguendo il tutorial introduttivo di Astro. Questa è la seconda pagina sul mio sito web, ed è la prima che ho costruito da solo!</p>
