feat: add navigation links to about and blog pages

--- a/celestial-cycle/src/pages/about.astro
+++ b/celestial-cycle/src/pages/about.astro
@@ -12,7 +12,8 @@ const name = "Romeo";
 	</head>
 	<body>
 		<a href="/">Home</a>
-		<a href="/about/">Su di me</a>
+        <a href="/about/">Su di me</a>
+        <a href="/blog/">Blog</a>
 
 		<h1>Su di me</h1>
         <h2>... e il mio nuovo sito Astro!</h2>
