--- a/celestial-cycle/src/pages/index.astro
+++ b/celestial-cycle/src/pages/index.astro
@@ -11,6 +11,10 @@ const name = "Romeo";
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+        <a href="/about/">Su di me</a>
+        <a href="/blog/">Blog</a>
+
 		<h1>Astro</h1>
 		<h2>Hello {name}!</h2>
 	</body>
