--- a/celestial-cycle/src/pages/blog.astro
+++ b/celestial-cycle/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "Il mio Blog di apprendimento di Astro";
 ---
 
 <html lang="en">
@@ -7,14 +8,19 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
         <a href="/">Home</a>
         <a href="/about/">Su di me</a>
         <a href="/blog/">Blog</a>
 
-		<h1>Il mio Blog di apprendimento di Astro</h1>
+		<h1>{pageTitle}</h1>
         <p>Questo è dove pubblicherò sul mio percorso di apprendimento di Astro.</p>
+        <ul>
+            <li><a href="/posts/post-1/">Articolo 1</a></li>
+            <li><a href="/posts/post-2/">Articolo 2</a></li>
+            <li><a href="/posts/post-3/">Articolo 3</a></li>
+        </ul>
 	</body>
 </html>
