--- a/celestial-cycle/src/pages/index.astro
+++ b/celestial-cycle/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 const name = "Romeo";
+const pageTitle = "Astro";
 ---
 
 <html lang="en">
@@ -8,14 +9,14 @@ const name = "Romeo";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
 		<a href="/">Home</a>
         <a href="/about/">Su di me</a>
         <a href="/blog/">Blog</a>
 
-		<h1>Astro</h1>
+		<h1>{pageTitle}</h1>
 		<h2>Hello {name}!</h2>
 	</body>
 </html>
