--- a/celestial-cycle/src/pages/index.astro
+++ b/celestial-cycle/src/pages/index.astro
@@ -1,24 +1,26 @@
 ---
 import '../styles/global.css';
+import '../components/Navigation.astro';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
-const name = "Romeo";
-const pageTitle = "Astro";
+const name = 'Romeo';
+const pageTitle = 'Astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<a href="/">Home</a>
-        <a href="/about/">Su di me</a>
-        <a href="/blog/">Blog</a>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <meta name='viewport' content='width=device-width' />
+    <meta name='generator' content={Astro.generator} />
+    <title>{pageTitle}</title>
+  </head>
+  <body>
+    <Navigation />
 
-		<h1>{pageTitle}</h1>
-		<h2>Hello {name}!</h2>
-	</body>
+    <h1>{pageTitle}</h1>
+    <h2>Hello {name}!</h2>
+    <Footer />
+  </body>
 </html>
