--- a/celestial-cycle/src/components/Navigation.astro
+++ b/celestial-cycle/src/components/Navigation.astro
@@ -2,6 +2,8 @@
 
 ---
 
-<a href='/'>Home</a>
-<a href='/about/'>Su di me</a>
-<a href='/blog/'>Blog</a>
+<div class='nav-links'>
+  <a href='/'>Home</a>
+  <a href='/about/'>Su di me</a>
+  <a href='/blog/'>Blog</a>
+</div>
