--- a/celestial-cycle/src/layouts/BaseLayout.astro
+++ b/celestial-cycle/src/layouts/BaseLayout.astro
@@ -2,11 +2,10 @@
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
-
-const pageTitle = 'Il mio Blog di apprendimento di Astro';
+const {pageTitle} = Astro.props;
 ---
 
-<html lang='en'>
+<html lang='it'>
   <head>
     <meta charset='utf-8' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
@@ -16,14 +15,8 @@ const pageTitle = 'Il mio Blog di apprendimento di Astro';
   </head>
   <body>
     <Header />
-
     <h1>{pageTitle}</h1>
-    <p>Questo è dove pubblicherò sul mio percorso di apprendimento di Astro.</p>
-    <ul>
-      <li><a href='/posts/post-1/'>Articolo 1</a></li>
-      <li><a href='/posts/post-2/'>Articolo 2</a></li>
-      <li><a href='/posts/post-3/'>Articolo 3</a></li>
-    </ul>
+    <slot />
     <Footer />
     <script>
       import '../scripts/menu.js';
