--- a/celestial-cycle/src/pages/about.astro
+++ b/celestial-cycle/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
@@ -49,7 +49,7 @@ const textCase = 'uppercase';
     </style>
   </head>
   <body>
-    <Navigation />
+    <Header />
 
     <h1>{pageTitle}</h1>
     <h2>... e il mio nuovo sito Astro!</h2>
@@ -91,6 +91,9 @@ const textCase = 'uppercase';
         <p>Sto ancora lavorando al mio obiettivo.</p>
       )
     }
-	<Footer />
+    <Footer />
+    <script>
+      import '../scripts/menu.js';
+    </script>
   </body>
 </html>
