--- a/celestial-cycle/src/pages/index.astro
+++ b/celestial-cycle/src/pages/index.astro
@@ -1,26 +1,14 @@
 ---
 import '../styles/global.css';
 import '../components/Navigation.astro';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const name = 'Romeo';
-const pageTitle = 'Astro';
+const pageTitle = 'Pagina Iniziale';
 ---
 
-<html lang='en'>
-  <head>
-    <meta charset='utf-8' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <meta name='viewport' content='width=device-width' />
-    <meta name='generator' content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <Navigation />
-
-    <h1>{pageTitle}</h1>
-    <h2>Hello {name}!</h2>
-    <Footer />
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>Il sottotitolo del mio fantastico blog</h2>
+</BaseLayout>
