--- a/celestial-cycle/src/styles/global.css
+++ b/celestial-cycle/src/styles/global.css
@@ -21,6 +21,18 @@ h1 {
 }
 
 /* stili nav */
+.hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+}
+
+.hamburger .line {
+  display: block;
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: #ff9776;
+}
 
 .nav-links {
   width: 100%;
@@ -42,7 +54,7 @@ h1 {
 }
 
 .nav-links a:hover,
-.nav-links a:focus {
+a:focus {
   background-color: #ff9776;
 }
 
@@ -64,4 +76,7 @@ h1 {
     padding: 15px 20px;
   }
 
+  .hamburger {
+    display: none;
+  }
 }
