--- a/celestial-cycle/src/pages/blog.astro
+++ b/celestial-cycle/src/pages/blog.astro
@@ -2,31 +2,17 @@
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = 'Il mio Blog di apprendimento di Astro';
 ---
 
-<html lang='en'>
-  <head>
-    <meta charset='utf-8' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <meta name='viewport' content='width=device-width' />
-    <meta name='generator' content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <Header />
-
-    <h1>{pageTitle}</h1>
-    <p>Questo è dove pubblicherò sul mio percorso di apprendimento di Astro.</p>
-    <ul>
-      <li><a href='/posts/post-1/'>Articolo 1</a></li>
-      <li><a href='/posts/post-2/'>Articolo 2</a></li>
-      <li><a href='/posts/post-3/'>Articolo 3</a></li>
-    </ul>
-    <Footer />
-    <script>
-      import '../scripts/menu.js';
-    </script>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <p>Questo è dove pubblicherò sul mio percorso di apprendimento di Astro.</p>
+  <ul>
+    <li><a href='/posts/post-1/'>Articolo 1</a></li>
+    <li><a href='/posts/post-2/'>Articolo 2</a></li>
+    <li><a href='/posts/post-3/'>Articolo 3</a></li>
+  </ul>
+</BaseLayout>
+    
