--- a/celestial-cycle/src/pages/tags/[tag].astro
+++ b/celestial-cycle/src/pages/tags/[tag].astro
@@ -1,16 +1,18 @@
 ---
+import BlogPost from '../../components/BlogPost.astro';
 import BaseLayout from '../../layouts/BaseLayout.astro';
 
 export async function getStaticPaths() {
     const allPosts = Object.values(import.meta.glob('../posts/*.md', {eager: true}));
-  return [
-    { params: { tag: "astro" }, props: {posts: allPosts} },
-    { params: { tag: "successi" }, props: {posts: allPosts} },
-    { params: { tag: "community" }, props: {posts: allPosts}  },
-    { params: { tag: "blogging" }, props: {posts: allPosts}  },
-    { params: { tag: "battute d'arresto" }, props: {posts: allPosts}  },
-    { params: { tag: "imparare in pubblico" }, props: {posts: allPosts}  },
-  ];
+    const uniqueTags = [new Set(allPosts.map((post: any) => post.frontmatter.tags).flat())];
+
+    return uniqueTags.map((tag) => {
+      const filteredPosts = allPosts.filter((post: any) => post.frontmatter.tags.includes(tag));
+      return {
+        params: { tag },
+        props: { posts: filteredPosts },
+        };
+    });
 }
 
 const {tag} = Astro.params;
@@ -20,6 +22,6 @@ const filteredPosts = posts.filter((post:any) => post.frontmatter.tags?.includes
 <BaseLayout pageTitle = {tag}>
     <p>Articoli taggati con {tag}</p>
     <ul>
-        {filteredPosts.map((post:any) => <li><a href={post.url}>{post.frontmatter.title}</a ></li>)}
+      {posts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title}></BlogPost>)}
     </ul>
 </BaseLayout>
