--- a/celestial-cycle/src/pages/tags/[tag].astro
+++ b/celestial-cycle/src/pages/tags/[tag].astro
@@ -1,27 +1,27 @@
 ---
-import BlogPost from '../../components/BlogPost.astro';
 import BaseLayout from '../../layouts/BaseLayout.astro';
+import BlogPost from '../../components/BlogPost.astro';
 
 export async function getStaticPaths() {
-    const allPosts = Object.values(import.meta.glob('../posts/*.md', {eager: true}));
-    const uniqueTags = [new Set(allPosts.map((post: any) => post.frontmatter.tags).flat())];
+  const allPosts = Object.values(import.meta.glob('../posts/*.md', { eager: true }));
 
-    return uniqueTags.map((tag) => {
-      const filteredPosts = allPosts.filter((post: any) => post.frontmatter.tags.includes(tag));
-      return {
-        params: { tag },
-        props: { posts: filteredPosts },
-        };
-    });
+  const uniqueTags = [...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat())];
+
+  return uniqueTags.map((tag) => {
+    const filteredPosts = allPosts.filter((post: any) => post.frontmatter.tags.includes(tag));
+    return {
+      params: { tag },
+      props: { posts: filteredPosts },
+    };
+  });
 }
 
-const {tag} = Astro.params;
-const {posts} = Astro.props;
-const filteredPosts = posts.filter((post:any) => post.frontmatter.tags?.includes(tag))
+const { tag } = Astro.params;
+const { posts } = Astro.props;
 ---
-<BaseLayout pageTitle = {tag}>
-    <p>Articoli taggati con {tag}</p>
-    <ul>
-      {posts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title}></BlogPost>)}
-    </ul>
+<BaseLayout pageTitle={tag}>
+  <p>Articoli taggati con {tag}</p>
+  <ul>
+    {posts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
+  </ul>
 </BaseLayout>
