--- a/celestial-cycle/src/pages/tags/index.astro
+++ b/celestial-cycle/src/pages/tags/index.astro
@@ -1,6 +1,43 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
+const allPosts = Object.values(
+  import.meta.glob('../posts/*.md', { eager: true }),
+);
+const tags = [
+  ...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat()),
+];
 const pageTitle = 'Tag Index';
 ---
 
-<BaseLayout pageTitle={pageTitle} />
+<BaseLayout pageTitle={pageTitle}>
+  <div class='tags'>
+    {
+      tags.map((tag) => (
+        <p>
+          <a class='tag' href={`/tags/${tag}`}>
+            {tag}
+          </a>
+        </p>
+      ))
+    }
+  </div>
+</BaseLayout>
+
+<style>
+  a {
+    color: #00539f;
+  }
+
+  .tags {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .tag {
+    margin: 0.25rem;
+    border: dotted 1px #a1a1a1;
+    border-radius: 0.5em;
+    padding: 0.5em 1em;
+    font-size: 1.15em;
+    background-color: #f8fcfd;
+  }
+</style>
