--- a/celestial-cycle/src/pages/about.astro
+++ b/celestial-cycle/src/pages/about.astro
@@ -21,62 +21,61 @@ const skills = [
 ];
 
 const happy: boolean = true;
-const finished = false;
+const finished = true;
 const goal: number = 3;
 
 const skillColor = 'navy';
 ---
+
 <BaseLayout pageTitle={pageTitle}>
-    <h2>... e il mio nuovo sito Astro!</h2>
-    <p>
-      Sto seguendo il tutorial introduttivo di Astro. Questa è la seconda pagina
-      sul mio sito web, ed è la prima che ho costruito da solo!
-    </p>
-    <p>
-      Questo sito si aggiornerà man mano che completerò altre parti del
-      tutorial, quindi continua a controllare e vedi come sta andando il mio
-      percorso!
-    </p>
-    <p>Grazie per aver visitato il mio sito web Astro.</p>
+  <h2>... e il mio nuovo sito Astro!</h2>
+  <p>
+    Sto seguendo il tutorial introduttivo di Astro. Questa è la seconda pagina
+    sul mio sito web, ed è la prima che ho costruito da solo!
+  </p>
+  <p>
+    Questo sito si aggiornerà man mano che completerò altre parti del tutorial,
+    quindi continua a controllare e vedi come sta andando il mio percorso!
+  </p>
+  <p>Grazie per aver visitato il mio sito web Astro.</p>
 
-    <p>Ecco alcuni fatti su di me:</p>
-    <ul>
-      <li>Il mio nome è {identity.firstName}.</li>
-      <li>Vivo in {identity.country} e lavoro come {identity.occupation}.</li>
-      {
-        identity.hobbies.length >= 2 && (
-          <li>
-            Due dei miei hobby sono: {identity.hobbies[0]} e{' '}
-            {identity.hobbies[1]}
-          </li>
-        )
-      }
-    </ul>
-    <p>Le mie competenze sono:</p>
-    <ul>
-      {skills.map((skill) => <li class='skill'>{skill}</li>)}
-    </ul>
-
-    {happy && <p>Sono felice di imparare Astro!</p>}
-    {!finished && <p>Non ho ancora finito il tutorial.</p>}
+  <p>Ecco alcuni fatti su di me:</p>
+  <ul>
+    <li>Il mio nome è {identity.firstName}.</li>
+    <li>Vivo in {identity.country} e lavoro come {identity.occupation}.</li>
     {
-      goal === 3 ? (
-        <p>Il mio obiettivo è completare il tutorial di Astro!</p>
-      ) : (
-        <p>Sto ancora lavorando al mio obiettivo.</p>
+      identity.hobbies.length >= 2 && (
+        <li>
+          Due dei miei hobby sono: {identity.hobbies[0]} e {identity.hobbies[1]}
+        </li>
       )
     }
+  </ul>
+  <p>Le mie competenze sono:</p>
+  <ul>
+    {skills.map((skill) => <li class='skill'>{skill}</li>)}
+  </ul>
+
+  {happy && <p>Sono felice di imparare Astro!</p>}
+  {!finished && <p>Non ho ancora finito il tutorial.</p>}
+  {
+    goal === 3 ? (
+      <p>Il mio obiettivo è completare il tutorial di Astro!</p>
+    ) : (
+      <p>Sto ancora lavorando al mio obiettivo.</p>
+    )
+  }
 </BaseLayout>
-  <script>
-      import '../scripts/menu.js';
-  </script>
-  <style is:global define:vars={{ skillColor }}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-      .skill {
-        color: var(--skillColor);
-        font-weight: bold;
-      }
-  </style>
+<script>
+  import '../scripts/menu.js';
+</script>
+<style is:global define:vars={{ skillColor }}>
+  h1 {
+    color: purple;
+    font-size: 4rem;
+  }
+  .skill {
+    color: var(--skillColor);
+    font-weight: bold;
+  }
+</style>
